--- a/TED_main.ipynb
+++ b/TED_main.ipynb
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading all the documents together"
+    "## Loading all the documents together, retaining all the punctuations to get a proper count of pauses and question marks for EDA"
    ]
   },
   {
@@ -729,7 +729,7 @@
     "collapsed": false
    },
    "source": [
-    "## Load all documents together\n",
+    "## Load all documents together, with all the preprocessing steps included\n",
     "\n",
     "## Pre-processing:\n",
     "\n",
