--- a/TED_main.ipynb
+++ b/TED_main.ipynb
@@ -65,7 +65,9 @@
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer, TfidfTransformer\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import Normalizer\n"
+    "from sklearn.preprocessing import Normalizer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE"
    ]
   },
   {
@@ -1075,7 +1077,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> It doesnt perform that well, we can see that the clusters are unevenly distributed among the clusters. But we donot have any class imbalance in our data."
+    "> It doesnt perform that well, we can see that the documents are unevenly distributed among the clusters. But we donot have any class imbalance in our data."
    ]
   },
   {
@@ -3081,7 +3083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### having a hold-out set before sending the data into Doc2Vec."
+    "### having a hold-out set before sending the data into Doc2Vec model."
    ]
   },
   {
@@ -3438,60 +3440,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12f03a2b0>]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAEACAYAAABfxaZOAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHqlJREFUeJzt3XmYVOWVx/HvaRDZXECRKA4ENC4haEAlOPJo40LaFdRo\nwIkGjYpG4hIzgslkaMc4UScyatAo7jsuCYoSDETTGkAWCTJgwHaDAG4oREFA2u4zf7zVUjRNd1X3\nrb5VdX+f56mHuvu5z9VTb5/73veauyMiIslQEncAIiLScpT0RUQSRElfRCRBlPRFRBJESV9EJEGU\n9EVEEiSjpG9mZWa21MwqzWx0PctPMbOFZrbAzOaa2RFpy5alL4syeBERyY411k/fzEqASuAY4D1g\nHjDM3ZemrdPe3TekvvcBnnD3A1PT7wCHuPva3JyCiIhkKpOWfn/gTXdf7u5VwERgSPoKtQk/pSNQ\nkzZtGR5HRERyLJNk3A1YkTa9MjVvK2Y21MyWAM8C56UtcmC6mc0zswuaE6yIiDRPZC1wd386VdIZ\nCvwqbdER7t4POAG4xMwGRnVMERHJTusM1lkFdE+b3js1r17uPsPMeplZZ3df4+7vp+avNrNJhHLR\njLrbmZkGARIRyZK7WzbrZ9LSnwfsa2Y9zKwNMAyYnL6Cme2T9r0f0Mbd15hZezPrmJrfARgMLG4g\n+IL51NRkvu7YsWNjjzeXH51fYX90foX7aYpGW/ruXm1mo4BphB+Je9x9iZmNDIt9AnC6mZ0DbAY2\nAmemNu8KTEq14lsDj7j7tCZFmifc4corYeVKeOKJuKMREclOJuUd3P15YP868+5M+34jcGM9270L\nfLuZMeaN6moYORL++leoqWl8fRGRfJNR0hfYvBnOPhs+/hhmzoS99w4/Aq1aNb5taWlpzuOLk86v\nsOn8kqXRh7Naipl5vsRS18aNcMYZUFISSjpt20K3bvDKK9C9e+Pbi4jkgpnhObiRm2jr18OJJ8JO\nO8Hvfx8SPkCvXvDuu/HGJiKSLSX9BqxdC8cdB/vsAw8/DDvssGVZz55K+iJSeJT0t+Ojj2DQIDj8\ncJgwYdvafc+e8M478cQmItJUSvr1WLECjjwShg6Fm24Cq6dipvKOiBQi9d6p4+234dhjYdSo0B9/\ne9TSF5FCpJZ+mtdfh6OOgquvbjjhg1r6IlKY1GUzZc4cGDIExo2Ds85qfP2aGmjfPtzsbdcu9/GJ\niNSlLptN4A7jx8PJJ8Pdd2eW8CH02e/eHZYty2l4IiKRSnRNf906uOACeOMNmDUL9t03u+1rSzwH\nHpib+EREopbYlv7ixXDYYbDzzk1L+KCbuSJSeBKZ9B98MPTB//nPQx/8ptbkdTNXRApNoso7mzbB\npZfCyy/Diy9Cnz7N21/PnmH8HRGRQpGYlv7bb4enaz/7DObNa37CB5V3RKTwJCLpP/10SPjnnw+P\nPRYGT4tCbXknT3q9iog0qqjLO1VV4UGrp56C556D/v2j3X+nTmGIhjVrYLfdot23iEguFHXSv+oq\nqKyE+fNzl5RrR9tU0heRQlDUSb+8PJRySnJYxKot8Rx6aO6OISISlaJO+rvskvtj6GauiBSSRNzI\nzSX11ReRQqKk30xq6YtIIVHSbya9NlFEComGVm6mTZtg113h88+3faWiiEguaWjlGLRtG7prrloV\ndyQiIo1T0o+AbuaKSKFQ0o+AbuaKSKFQ0o+AbuaKSKHIKOmbWZmZLTWzSjMbXc/yU8xsoZktMLO5\nZnZEptsWA5V3RKRQNJr0zawEGA98F+gNDDezA+qs9md3P9jd+wI/Au7OYtuCp/KOiBSKTFr6/YE3\n3X25u1cBE4Eh6Su4+4a0yY5ATabbFgO19EWkUGSS9LsBK9KmV6bmbcXMhprZEuBZ4Lxsti10e+0V\nhlfeuDHuSEREGhbZjVx3f9rdDwSGAr+Kar+FoKQEuneHZcvijkREpGGZjLK5CuieNr13al693H2G\nmfUys87ZblteXv7V99LSUkpLSzMILz/UlngOPDDuSESkWFVUVFBRUdGsfTQ6DIOZtQLeAI4B3gfm\nAsPdfUnaOvu4+9up7/2AZ9z9XzLZNm0fBTkMQ62LL4bevWHUqLgjEZGkaMowDI229N292sxGAdMI\n5aB73H2JmY0Mi30CcLqZnQNsBjYCZza0bVZnVSDUV19ECoEGXIvIU0/BI4/ApElxRyIiSaEB12Kk\nlr6IFAIl/YjU3sgt4D9WRCQBlPQj0qkTmIX++iIi+UpJP0Iq8YhIvlPSj1CvXhqDR0Tym5J+hNTS\nF5F8p6QfIQ28JiL5Tkk/QhpiWUTynZJ+hFTeEZF8pydyI7RpE+yyC2zYAK1axR2NiBQ7PZEbs7Zt\nYffdYdV2xxEVEYmXkn7EdDNXRPKZkn7EdDNXRPKZkn7EdDNXRPKZkn7E9FSuiOQzJf2IqaUvIvlM\nST9iSvoiks/UTz9i1dXQoQOsXQvt2sUdjYgUM/XTzwOtWkH37rBsWdyRiIhsS0k/B3QzV0TylZJ+\nDqiuLyL5Skk/B5T0RSRfKenngMo7IpKvlPRzQC19EclXSvo5UDvoWhH0QBWRIqOknwOdOoEZrFkT\ndyQiIltT0s8RlXhEJB8p6eeIbuaKSD5S0s8RtfRFJB9llPTNrMzMlppZpZmNrmf5WWa2MPWZYWYH\npS1blpq/wMzmRhl8PtMbtEQkHzWa9M2sBBgPfBfoDQw3swPqrPYOcKS7Hwz8CpiQtqwGKHX3vu7e\nP5qw85/eoCUi+SiTln5/4E13X+7uVcBEYEj6Cu4+290/TU3OBrqlLbYMj1NUVN4RkXyUSTLuBqxI\nm17J1km9rvOBqWnTDkw3s3lmdkH2IRamr38d/vGPMNRyVNzh889h5UpYtAhefVXPAohIdlpHuTMz\nGwScCwxMm32Eu79vZl0IyX+Ju8+ob/vy8vKvvpeWllJaWhpleC2qbVvYfXdYtSoMtZyJ6mq45Zbw\nF8LatVs+a9Zs+d6qVXgOoFMnWL0axo+HM8/M7bmISH6oqKigoqKiWfto9CUqZjYAKHf3stT0GMDd\n/YY66x0E/B4oc/e3t7OvscA6dx9Xz7KieIlKuoED4brr4KijMlv/iitg7tyQxDt1gs6dtyT42k/b\ntlvWf/xxuPNOePHF3MQvIvmtKS9RyaSlPw/Y18x6AO8Dw4DhdQ7cnZDwz05P+GbWHihx9/Vm1gEY\nDFyTTYCFrLavfiZJf/x4eP55mDUrJPdMnHoqXHYZLF0KB9S9tS4iUo9Ga/ruXg2MAqYBrwMT3X2J\nmY00swtTq/0S6AzcXqdrZldghpktINzgfdbdp0V+Fnkq05u5U6aEvwimTMk84QO0aQPnnRda+yIi\nmdA7cnPogQdg+nR4+OHtr/Paa3DccTB5Mhx+ePbHWLYMDj003DRu377JoYpIAdI7cvNMYy39Vavg\nlFPgttualvAh9BL6znfgiSeatr2IJIuSfg41lPTXr4eTT4Yf/7j5vW8uugjuuKN5+xCRZFB5J4eq\nq6FDh9DVsl27reefeirssQfcdVcYhrm5x+nZE555Bvr2bd6+RKRwqLyTZ1q1Cn30ly3bev6VV8KG\nDfC73zU/4dce58IL1doXkcYp6edY3SGWf/tbmDYNnnoKdtghuuP86Eehrv/ZZ9HtU0SKj5J+jqXX\n9adMgV//Ovy7667RHmfPPeHYYxvuKSQioqSfY7VJ/7XXYMQI+MMfwrxcuOiiUDIqslsjIhIhJf0c\n69ULXnkl9NS5/XYYMCB3xzr6aNi8OTzVKyJSHyX9HOvZMyT9UaPgjDNyeywzGDkytPZFROqjLps5\nVlUVSjpnnhlNT53GrFkT/rp4660wyqeIFK+mdNlU0i9CP/wh9OkDP/tZ3JGISC4p6QsAs2fDD34A\nlZVQogKeSNHSw1kChLF4OnaEF16IOxIRyTdK+kXIbEv3TRGRdCrvFKl168IQEIsXQ7eG3mgsIgVL\n5R35yk47wbBhcPfdcUciIvlELf0itnAhnHhiGPCtdSYvxhSRgqKWvmzl4INDiee55+KORETyhZJ+\nkbv4Yg25LCJbqLxT5DZuDK39OXPCk7oiUjxU3pFttGsH55wDd94ZdyQikg/U0k+AykoYOBBWrIAd\nd4w7GhGJilr6Uq/99gs3dR97LO5IRCRuauknxMsvhzLP0qXQtm3c0YhIFNTSl+068sgw8qaGZhBJ\nNrX0E2TxYjjmmFDj32WXuKMRkeZSS18a9K1vwQknwP/8T9yRiEhc1NJPmH/8A/r2Da3+PfeMOxoR\naY6ctfTNrMzMlppZpZmNrmf5WWa2MPWZYWYHZbqttKzu3eHcc+Gaa+KORETi0GhL38xKgErgGOA9\nYB4wzN2Xpq0zAFji7p+aWRlQ7u4DMtk2bR9q6beQTz6B/feHWbNCd04RKUy5aun3B9509+XuXgVM\nBIakr+Dus93909TkbKBbpttKy9ttt/D+3F/8Iu5IRKSlZZL0uwEr0qZXsiWp1+d8YGoTt5UWcuml\noaU/Z07ckYhIS4p0lHUzGwScCwxsyvbl5eVffS8tLaW0tDSSuGRb7dtDeTmMGQMvvhhesSgi+a2i\nooKKiopm7SOTmv4AQo2+LDU9BnB3v6HOegcBvwfK3P3tbLZNLVNNv4V9+WXoxnnzzVBWFnc0IpKt\nXNX05wH7mlkPM2sDDAMm1zlwd0LCP7s24We6rcSndWv49a9h9GioqYk7GhFpCY0mfXevBkYB04DX\ngYnuvsTMRprZhanVfgl0Bm43swVmNrehbXNwHtJEQ4eGUs+jj8YdiYi0BD2cJbz0EowYEQZj09DL\nIoVDwzBIkxx1FPTurdcqiiSBWvoCwKJFcOyxGoxNpJCopS9N1qdP6MHzm9/EHYmI5JJa+vKV5cuh\nXz8NxiZSKJrS0lfSl61ceSVs3Ai33x53JCLSGCV9aTYNxiZSOFTTl2bbbbcwNMOIEbBpU9zRiEjU\n1NKXbdTUwPDhUFISHtrSuDwi+UktfYlESQncfz8sWxYGZROR4hHpKJtSPNq1g6efhgEDYN994eyz\n445IRKKgpC/b1bUrPPccDBoEPXrAkUfGHZGINJfKO9Kg3r3h4YfhzDPhrbfijkZEmktJXxo1eHB4\nkfqJJ8KaNXFHIyLNod47krGf/Qzmz4c//QnatIk7GhHRw1mSU9XVcPrp0KkT3HuvunKKxE1dNiWn\nWrWCRx6BhQvh+uvjjkZEmkK9dyQrHTrAs89u6cp5xhlxRyQi2VB5R5rktdfguONCl87vfCfuaESS\nSeUdaTHf/jbcdx+cemp4cldECoOSvjTZSSfBVVfBkCFhOGYRyX8q70izuMO//Ru0bw933x13NCLJ\novKOtDgzmDABZs4Mg7SJSH5TS18i8frrUFoKL74Y3rcrIrmnlr7EpndvGDcOvvc9+OyzuKMRke1R\nS18ideGF8OmnMHGintgVyTW19CV2t94KlZVw223N289f/hLKRR98EElYIpKipC+RatsWnnoK/uu/\nYO7c7LevqYFrr4WzzoI99wzv6q2piTxMkcRS0pfI7bMP3HlnGIP/k08y3271ajj+ePjzn8Nong89\nFEpF48fnLlaRpMko6ZtZmZktNbNKMxtdz/L9zWyWmW0ys5/WWbbMzBaa2QIza0LbTwrRqaeGETnP\nOSezlvqMGdCvHxxyCLzwAuy1F7RuHV7gcu21sGhR7mMWSYJGb+SaWQlQCRwDvAfMA4a5+9K0dXYH\negBDgbXuPi5t2TvAIe6+tpHj6EZukamqCnX5k06Cq6+uf52aGvjNb+Cmm8KwDiecsO06998fls+b\nF8pHIhLk6kZuf+BNd1/u7lXARGBI+gru/rG7zwe+rC+uDI8jRWaHHeDxx+GWW6CiYtvla9aEIRwm\nTQoJvb6ED/DDH8KBB8KYMTkNVyQRMknG3YAVadMrU/My5cB0M5tnZhdkE5wUvr33hgcfDEM1pPfE\nmTMnlHP22w9eegm6d9/+PszgjjvgD3+A55/PfcwixawlxtM/wt3fN7MuhOS/xN1n1LdieXn5V99L\nS0spLS1tgfAk1wYPhgsugOHDYfr00J3zuuvC8A1Dh2a2j86d4YEH4Ac/CMM6d+mS25hF8lFFRQUV\n9f3ZnIVMavoDgHJ3L0tNjwHc3W+oZ92xwLr0mn6my1XTL27V1VBWBsuXw847wxNPQK9e2e9nzBj4\n+9/hmWf08JdIrmr684B9zayHmbUBhgGTG4ojLaD2ZtYx9b0DMBhYnE2AUhxatYJHHw1P7M6c2bSE\nD6H//6pV4a8EEcleRsMwmFkZcAvhR+Ied7/ezEYSWvwTzKwr8CqwE1ADrAe+CXQBJhHq+q2BR9y9\n3rerqqUvmXrjDRg4EP76VzjggLijEYlPU1r6GntHCtKECeHm7uzZ0KZN3NGIxENJXxLDPTwAtv/+\ncMM2d5dEkkFJXxJl9erwrt6HHoKjj447GpGWp1E2JVG6dIF77w0Pb61ZE3c0IoVBLX0peFdcAStW\nwJNPqhunJIvKO5JImzaFMX66dAmje+61V9wRibQMlXckkdq2hZdfDsM61Nb41X4QqZ9a+lJUFiwI\nL17p3l2tfil+aulL4vXtG0bsVKtfpH5q6UvRUqtfip1a+iJp1OoX2ZZa+pIIavVLMVJLX2Q76rb6\nb74ZNm6ML5516+BPf4K1Db5EVCR6aulL4ixaBGPHhsHaRo8Owz23a9dyx58xI7wwfvfdYenS8CrI\nY4+F446Dww+HHXdsuViksKmlL5KBPn3CqxenTAnv7t1nn/Ae31y3/L/4IvzInHFG+Etj7twwflDt\ngHGjR4cfgrKy8CL4hQvDi+NFoqSWviTeggXh5Sxz5uSu5b9oUXjVY8+eYVjoPfaof721a+Evf4E/\n/zl8Pv0UjjkGTjkFvv99DTMhW9MwDCLNkIvkX10N48bBjTeGz4gR2SXu5ctD8r/pprDtVVc1Lx4p\nLkr6IhFYsACuuSaUX0aPhvPOg512yn4/774bRgA1Cy91//rXmx7TqlVwxBHhR+mcc5q+HykuqumL\nRKBvX3j66S01/z33DPMuuQQefhjefrvh/v7uYcjn/v1hyJBQrmlOwgfo1g2mTg0t/eefb96+JNnU\n0hdpxBdfhNb/K6/ArFnh36qq0NPmX/81/HvooaEU9NFHoSy0bFl4GKxPn2hjmTUr/JD88Y9w2GHR\n7lsKj8o7Ii1kxYotPwCzZsHrr0Pv3mH+iBFQXp67rpeTJ8PIkWFk0W98IzfHkMKgpC8Sk40b4dVX\noWPHUArKtbvuguuvh5kz4Wtfy/3xJD8p6YskyDXXhFZ/RUXTbjRL4VPSF0kQd7jootBL6LnnoE2b\nuCOSlqakL5IwX34J3/teKCs9+CCUqD9eoqjLpkjCtG4Njz0WWvujR8cdTdO88AL8+MeweXPckSSD\nkr5IgWvXDp59NjxXMG5c3NFk549/hGHDYMmS8G9VVdwRFT8lfZEi0LlzeGjrf/83tPwLwaRJoXvr\ns8+G2L/4As4+O5SsJHdU0xcpIosXw6BBIYFmoqQELr00DDXdqlVuY0s3cSJcfnlo6ffrF+Zt2hQG\nluvaFe6/v2XjKVQ5u5FrZmXAzYS/DO5x9xvqLN8fuA/oB/zc3cdlum3aekr6IhH44ovMk/7atWEs\nnw4d4JFHoFOn3MYGYRyiq68OL5Gp+8Tyhg1w0klhNNK77tKN6cbkJOmbWQlQCRwDvAfMA4a5+9K0\ndXYHegBDgbW1ST+TbdP2oaQvEoOqqjCmz+TJ4T0DBx+cu2NNmADXXgvTp8MBB9S/zvr1cPzx8K1v\nwe23azjphuSq905/4E13X+7uVcBEYEj6Cu7+sbvPB+pW4xrdVkTitcMO4V7AtdeGN3g9+mhujnPr\nrfDf/x0eJttewofQ/XTKlDDe0eWX62X2Ucsk6XcDVqRNr0zNy0RzthWRFnTWWaH75C9/GZJtlD1p\nbrwxvJ3spZfCm8oas/PO4ebuzJnhrxAl/uioYiYiXznooDCGUGVlaPV/+GHz9uce3gFw771hgLge\nPTLfdtddYdq0UAr6j/9Q4o9K6wzWWQV0T5veOzUvE1ltW15e/tX30tJSSktLMzyMiESlU6fQjfKa\na8KQ0U8+CQMGZL8fd/jFL8K+Xnop9MrJVufOIekPGhRGLf3P/2x4/c2bYf788PL5GTPC6KdXXQUX\nXFAc9wYqKiqoqKho1j4yuZHbCniDcDP2fWAuMNzdl9Sz7lhgvbvf1IRtdSNXJM9Mngznnx/q/Rde\nmHnidIef/jQk+2nTwgvfm+PDD+Goo0K//jFjtsz/5z/D8Na1SX7+fNhvPxg4MHz22gsuuyy8COfu\nu4tvRNJcd9m8hS3dLq83s5GAu/sEM+sKvArsBNQA64Fvuvv6+rbdzjGU9EXy0BtvwGmnhZfFXHop\nrFkDn3wCH38c/q39pE+vXh1u1k6dGso0UXjvvZD4Tz45dEmdMQPeeSe8TKY2yQ8YEO4HpNu8Ofxo\n3XUX3HYbnH56NPHkAw24JiI5sW5dGB/nb38Lrfbddtvy2d50587R97NfsSKUnb75zZDk+/YNvY8y\nMXt2eOL38MPht7+FXXaJNrY4KOmLiDTg88/h3/89dAm97z44+ui4I9qiqiq8he3TT8OTyZnQKJsi\nIg3o0CE88HXnneFJ5CuuCG89i8uKFaHsdNpp0KULXHklLF+e22OqpS8iifTJJ3DxxaGHz0MPbRkD\nKJe++CI8ezB1avh88AEMHgxlZfDd72bfw0nlHRGRLLiHUUkvvxx+8hMYMgTatw9/EXToEL63zqRj\ne0pNTSghrV+/5d/168NAeFOnbnka+fjjw+fQQ5s3sJySvohIE6xcGRJ/ZWVI1rWfDRtC0k//Eaj9\nXl29bXLfuDGs07Hj1p9evUJrfvDg5ndfTaekLyISIfdQkqn9AUj/Qaj9MUhP7u3atezIoEr6IiIJ\not47IiLSICV9EZEEUdIXEUkQJX0RkQRR0hcRSRAlfRGRBFHSFxFJECV9EZEEUdIXEUkQJX0RkQRR\n0hcRSRAlfRGRBFHSFxFJECV9EZEEUdIXEUkQJX0RkQRR0hcRSRAlfRGRBFHSFxFJECV9EZEEUdIX\nEUmQjJK+mZWZ2VIzqzSz0dtZ51Yze9PMXjOzvmnzl5nZQjNbYGZzowpcRESy12jSN7MSYDzwXaA3\nMNzMDqizzvHAPu7+DWAk8Lu0xTVAqbv3dff+kUVeQCoqKuIOIad0foVN55csmbT0+wNvuvtyd68C\nJgJD6qwzBHgQwN3nALuYWdfUMsvwOEWr2P+j0/kVNp1fsmSSjLsBK9KmV6bmNbTOqrR1HJhuZvPM\n7IKmBioiIs3XugWOcYS7v29mXQjJf4m7z2iB44qISB3m7g2vYDYAKHf3stT0GMDd/Ya0de4A/uLu\nj6emlwJHufuHdfY1Fljn7uPqOU7DgYiIyDbc3bJZP5OW/jxgXzPrAbwPDAOG11lnMnAJ8HjqR+Kf\n7v6hmbUHStx9vZl1AAYD10QRuIiIZK/RpO/u1WY2CphGuAdwj7svMbORYbFPcPc/mtkJZvYW8Dlw\nbmrzrsCkVCu+NfCIu0/LzamIiEhjGi3viIhI8Yi9K2UmD34VsmJ7OM3M7jGzD83s/9LmdTKzaWb2\nhpn9ycx2iTPG5tjO+Y01s5Vm9rfUpyzOGJvKzPY2sxfN7HUzW2Rml6bmF8X1q+f8fpKaXyzXb0cz\nm5PKJYtS90izvn6xtvRTD35VAscA7xHuHwxz96WxBRUxM3sHOMTd18YdSxTMbCCwHnjQ3Q9KzbsB\n+MTdb0z9cHdy9zFxxtlU2zm/7XZAKCRm9jXga+7+mpl1BOYTnrE5lyK4fg2c3/cpgusHYGbt3X2D\nmbUCZgKXAqeTxfWLu6WfyYNfha6oHk5Ldbet+wM2BHgg9f0BYGiLBhWh7ZwfhOtY0Nz9A3d/LfV9\nPbAE2JsiuX7bOb/a54UK/voBuPuG1NcdCfdJnSyvX9zJKJMHvwpdEh5O26O2e667fwDsEXM8uTAq\nNa7U3YVa/khnZl8Hvg3MBroW2/VLO785qVlFcf3MrMTMFgAfANPdfR5ZXr+4k34SHOHu/YATgEtS\n5YNiV2y9A24Hern7twn/sxV0mSBV+ngKuCzVIq57vQr6+tVzfkVz/dy9xt37Ev5C629mvcny+sWd\n9FcB3dOm907NKxru/n7q39XAJEJJq9h8WDvWUqqu+lHM8UTK3Vf7lptfdwGHxRlPc5hZa0JCfMjd\nn0nNLprrV9/5FdP1q+XunwEVQBlZXr+4k/5XD36ZWRvCg1+TY44pMmbWPtXqIO3htMXxRhUJY+sa\n6WRgROr7D4Fn6m5QYLY6v9T/SLVOo7Cv4b3A3939lrR5xXT9tjm/Yrl+ZrZ7bWnKzNoBxxHuW2R1\n/WLvp5/qPnULWx78uj7WgCJkZj0Jrfv0h9MK+vzM7FGgFNgN+BAYCzwNPAn8C7AcONPd/xlXjM2x\nnfMbRKgP1wDLgJF1hxgpBGZ2BPAysIjw36QDPwfmAk9Q4NevgfM7i+K4fn0IN2pLUp/H3f06M+tM\nFtcv9qQvIiItJ+7yjoiItCAlfRGRBFHSFxFJECV9EZEEUdIXEUkQJX0RkQRR0hcRSRAlfRGRBPl/\nE4h0SsyjlJoAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x12ed4d048>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plot(range(2,30),s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 631,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pylab inline\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.manifold import TSNE"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 913,
    "metadata": {
     "collapsed": false
@@ -3756,7 +3704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> We can see that almost all the inital results are technology related. our search was \"computer\""
+    "> We can see the top 10 results  and almost all the inital results are technology related. our search was \"computer\""
    ]
   },
   {
@@ -3830,6 +3778,17 @@
     "    for i in range(len(sort[:10])):\n",
     "        print((labels)[sort[i][0]])\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doc2Vec performs better than LSA. That's because the LSA model doesnt consider the best low-rank approximation of the oriiginal TFIDF matrix.\n",
+    "\n",
+    "We can check how good the approximation is by computing Frobenius index. I did not have enough time to tune the LSA model. I was more focused on understanding Doc2Vec.\n",
+    "\n",
+    "I had implemented LSA from scratch on the 20 news groups data, for which I computed the frobenius indx and tuned it. You can look at my other project repos on github to find it."
    ]
   },
   {
